<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, BouncyLive!</string>
    <string name="app_name">Bouncy Balls Live</string>
    <string name="settings">Settings...</string>
    <string name="setting_gravity_onoff_summary">Toggles gravity on/off.  Remember to set "Force of Gravity" to a non-zero value.</string>
    <string name="setting_gravity_onoff_title">Enable Gravity</string>
    <string-array name="gravity_state_labels">
        <item>on, normal</item>
        <item>on, reverse</item>
        <item>off</item>
    </string-array>
    <string-array name="gravity_state_values">
        <item>1</item>
        <item>-1</item>
        <item>0</item>
    </string-array>
    <string name="setting_key_tilt">accelerometer_onoff</string>
    <string name="setting_key_gravitystate">gravity_state</string>
    <string name="setting_key_gravitymagnitude">gravityMagnitude</string>
    <string name="setting_key_ballcount">ballCount</string>
    <string name="setting_key_palette">palette_selection</string>
    <string name="setting_ballcount_summary">Determines how many bouncy balls are present onscreen.  Decrease for better performance on older hardware.</string>
    <string name="setting_gravitymagnitude_summary">Determines the magnitude of acceleration due to gravity.  Make sure to also toggle gravity on.</string>
    <string name="setting_ballcount_title">Ball Count</string>
    <string name="setting_accelerometer_summary">When this setting is on, you can manipulate the direction of gravity by tilting the device.</string>
    <string name="setting_accelerometer_title">Gravity Tilt Control</string>
    <string name="setting_gravitystate_summary">Enable, disable, or reverse gravity</string>
    <string name="setting_palette_summary">Color palettes courtesy of ColourLovers.com</string>
    <string name="setting_palette_title">Color Palette</string>
    <string name="setting_gravitystate_title">Gravity</string>
    <string name="setting_gravitystate_dialog_title">Gravity State</string>
    <string name="setting_backgroundcolor_title">Background Color</string>
    <string name="setting_key_backgroundcolor">background_color</string>
    <string name="setting_key_autochange">autochange_key</string>
    <string name="setting_autochange_title">Automatic Palette Change Interval</string>
    <string name="setting_autochange_summary">Choose an interval, if any, on which to automatically change to a randomly selected palette</string>
    <string-array name="autochange_state_labels">
        <item>Never</item>
        <item>Every Minute</item>
        <item>Every Hour</item>
		<item>Every Day (at midnight)</item>
		<item>Every Week (at midnight Sunday morning)</item>        
    </string-array>
    <string-array name="autochange_state_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="setting_autochange_dialog_title">Automatically Change Palette...</string>
    <string name="global_sharedpreferences_key">bouncylive_settings</string>
    <string name="setting_bgcolor_summary">Choose a background color, courtesy of ColourLovers.com.  White works best with a colorful palette, but if you want choices, you\'ve got \'em!</string>
    <string name="setting_bgcolor_title">Background Color</string>    
</resources>
